--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="container"></div>
 
-<script src="/__build__/shared.js"></script>
-<script src="/__build__/Icon.js"></script>
+<script src="__build__/shared.js"></script>
+<script src="__build__/Icon.js"></script>
 
 </body>
 </html>
