--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <div id="container"></div>
 
-<script src="react-icon/__build__/shared.js"></script>
-<script src="react-icon/__build__/Icon.js"></script>
+<script src="shared.js"></script>
+<script src="Icon.js"></script>
 
 </body>
 </html>
